# mi-tiendita-soft

./: .gitignore  Makefile  README.md  example_code.py  flake.nix  main.py  populate_test_sells.py  pyproject.toml  test_buisness.py
docs/: README.md  alcance-y-versiones.md  arquitectura.md  convencion_categoria.md  convencion_item.md  flujos-de-trabajo.md  historias-usuario.md  introduccion-y-objetivos.md
examples/: textual_example.py
examples/excel_example/: pandas_create_excel.py
src/business/: category_controller.py  create_stock_controller.py  sell_controller.py  stock_mapper.py
src/business/data/: category_data.xlsx  product_stock_data.xlsx  sell_data.xlsx
src/business/db_operations/: classes.py  create_database.py  create_sell_database.py  read_database.py  update_row_database.py  update_sell_row.py
src/ui/: ConfirmationModal.py  NotificationModal.py  create_sell_view.py  home_view.py  manage_sell_view.py  stock_create_view.py  stock_delete_message.py  stock_manage_view.py  stock_update_message.py
src/ui/styles/: create-view.tcss  manage-view.tcss  stock-manage-view.tcss  taskbar.tcss
src/ui/widgets/: taskbar.py
